# aivr-project

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
aivr/: .pylintrc  __init__.py  __main__.py  aivr.py  aivr_webcam.py  data.json
